Consuming rest services.

--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
     </div>
   </nav>
 
-  <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
+  <loading-indicator loading.bind="router.isNavigating"></loading-indicator>
 
   <div class="container">
     <div class="row">
