--- a/src/contact-list.html
+++ b/src/contact-list.html
@@ -6,7 +6,7 @@
                     <h4 class="list-group-item-heading">${contact.firstName} ${contact.lastName}</h4>
                     <p class="list-group-item-text">${contact.email}</p>
                 </a>
-                <a click.delegate="$parent.remove(contact)" style="color:#B8B5B5; position: absolute;right: 20px;top: 15px;"><i class="fa fa-remove fa-2x"></i></a>
+                <a click.delegate="$parent.remove(contact)" style="color:#B8B5B5; position: absolute;right: 20px;top: 15px;"><i style="cursor: pointer" class="fa fa-remove fa-2x"></i></a>
             </li>
         </ul>
     </div>
